<resources>
    <string name="app_name">AppToanCau</string>
    <string name="text_TieuDe">Information Form</string>
    <string name="hint_HoTen">Enter your name</string>
    <string name="hint_Email">Enter your email</string>
    <string name="hint_SDT">Enter your phone number</string>
    <string name="buttonXacNhan_name">Comfirm</string>
    <string name="text_ChaoBan">Hello</string>
    <string name="text_Email">Email</string>
    <string name="text_SoDienThoai">Phone number</string>
</resources>